--- a/plugin.xml
+++ b/plugin.xml
@@ -24,7 +24,7 @@
 		</config-file>
 		<config-file target="res/values/strings.xml" parent="/*">
 			<string name="txtBarcode">
-				Scan Barcode or type it here
+				Scan Barcode
 			</string>
 			<string name="ok">
 				OK
