Revert "version indicator"
This reverts commit 58920c39c17d7f53b29589662a64ccf2f0922730.

--- a/plugin.xml
+++ b/plugin.xml
@@ -24,7 +24,7 @@
 		</config-file>
 		<config-file target="res/values/strings.xml" parent="/*">
 			<string name="txtBarcode">
-				Scan Barcode v2
+				Scan Barcode
 			</string>
 			<string name="ok">
 				OK
